<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="tv_title">My Nanodegree Apps!</string>
    <string name="btn_app_title1">SPOTIFY STREAMER</string>
    <string name="btn_app_title2">SCOPES APP</string>
    <string name="btn_app_title3">LIBRARY APP</string>
    <string name="btn_app_title4">BUILD IT BIGGER</string>
    <string name="btn_app_title5">XYZ READER</string>
    <string name="btn_app_title6">CAPSTONE:MY OWN APP</string>
</resources>
